// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSlippageStepperDescription complete snapshots for all states snapshot for lower allowed error 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.lower_allowed_error [0.1]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription complete snapshots for all states snapshot for lower suggested warning 1`] = `
{
  "color": "text-warning-default",
  "icon": {
    "color": "text-warning-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.lower_suggested_warning [0.5]",
  "type": "warning",
}
`;

exports[`useSlippageStepperDescription complete snapshots for all states snapshot for no violation 1`] = `undefined`;

exports[`useSlippageStepperDescription complete snapshots for all states snapshot for upper allowed error 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_allowed_error [50]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription complete snapshots for all states snapshot for upper suggested warning 1`] = `
{
  "color": "text-warning-default",
  "icon": {
    "color": "text-warning-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_suggested_warning [5]",
  "type": "warning",
}
`;

exports[`useSlippageStepperDescription complete snapshots for all states snapshot with hasAttemptedToExceedMax 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_allowed_error [50]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription lower_allowed_slippage_threshold (ERROR) returns error when value is below inclusive lower allowed threshold 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.lower_allowed_error [0.1]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription lower_allowed_slippage_threshold (ERROR) returns error when value violates inclusive lower allowed threshold 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.lower_allowed_error [0.1]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription lower_suggested_slippage_threshold (WARNING) returns warning when value violates exclusive lower suggested threshold 1`] = `
{
  "color": "text-warning-default",
  "icon": {
    "color": "text-warning-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.lower_suggested_warning [0.5]",
  "type": "warning",
}
`;

exports[`useSlippageStepperDescription upper_allowed_slippage_threshold (ERROR) returns error when value exceeds inclusive upper allowed threshold 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_allowed_error [50]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription upper_allowed_slippage_threshold (ERROR) returns error when value violates inclusive upper allowed threshold 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_allowed_error [50]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription upper_allowed_slippage_threshold (ERROR) triggers error with hasAttemptedToExceedMax flag 1`] = `
{
  "color": "text-error-default",
  "icon": {
    "color": "text-error-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_allowed_error [50]",
  "type": "error",
}
`;

exports[`useSlippageStepperDescription upper_suggested_slippage_threshold (WARNING) returns warning when value exceeds exclusive upper suggested threshold 1`] = `
{
  "color": "text-warning-default",
  "icon": {
    "color": "text-warning-default",
    "name": "Danger",
    "size": "24",
  },
  "message": "bridge.upper_suggested_warning [5]",
  "type": "warning",
}
`;
